--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Login Page</title>
 		<link rel="stylesheet" href="./styles.css" />
 	</head>
 
@@ -13,6 +13,7 @@
 			<form action="" method="POST" class="form" id="register-form">
 				<button class="btn register-btn active">Đăng ký</button>
 				<button class="btn login-btn">Đăng nhập</button>
+				<div class="line"></div>
 				<div class="form-group">
 					<label for="fullname" class="form-label">Tên đầy đủ</label>
 					<input
