--- a/index.html
+++ b/index.html
@@ -59,35 +59,32 @@
 		<script src="./main.js"></script>
 		<script>
 			// Đầu ra mong muốn
-			document.addEventListener("DOMContentLoaded", function () {
-				// Mong muốn của chúng ta
-				Validator({
-					form: "#register-form",
-					formGroupSelector: ".form-group",
-					errorSelector: ".form-message",
-					rules: [
-						Validator.isRequired(
-							"#fullname",
-							"Vui lòng nhập tên đầy đủ của bạn"
-						),
-						Validator.isEmail("#email"),
-						Validator.minLength("#password", 6),
-						Validator.isRequired("#password_confirmation"),
-						Validator.isConfirmed(
-							"#password_confirmation",
-							function () {
-								return document.querySelector(
-									"#form-1 #password"
-								).value;
-							},
-							"Mật khẩu nhập lại không chính xác"
-						),
-					],
-					onSubmit: function (data) {
-						// Call API
-						console.log(data);
-					},
-				});
+			// Mong muốn của chúng ta
+			Validator({
+				form: "#register-form",
+				formGroupSelector: ".form-group",
+				errorSelector: ".form-message",
+				rules: [
+					Validator.isRequired(
+						"#fullname",
+						"Vui lòng nhập tên đầy đủ của bạn"
+					),
+					Validator.isEmail("#email"),
+					Validator.minLength("#password", 6),
+					Validator.isRequired("#password_confirmation"),
+					Validator.isConfirmed(
+						"#password_confirmation",
+						function () {
+							return document.querySelector("#form-1 #password")
+								.value;
+						},
+						"Mật khẩu nhập lại không chính xác"
+					),
+				],
+				onSubmit: function (data) {
+					// Call API
+					console.log(data);
+				},
 			});
 		</script>
 	</body>
