--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<div class="main">
-			<form action="" method="POST" class="form" id="register-form">
+			<form action="https://fullstack.edu.vn/" class="form" id="register-form">
 				<button class="btn register-btn active">Đăng ký</button>
 				<button class="btn login-btn">Đăng nhập</button>
 				<div class="line"></div>
@@ -52,7 +52,7 @@
 					/>
 					<span class="form-message"></span>
 				</div>
-				<button class="form-submit">Đăng ký</button>
+				<button type="submit" class="form-submit">Đăng ký</button>
 			</form>
 		</div>
 
